tests/type-errors/decl_no_asset.arl
archetype decl_asset

asset my_asset {
  id : string;
}

variable a : my_asset = {id = "id"}

action exec() {
  effect {
    require (true)
  }
}
